fix and feat: adjust align card to center and added package-look.json in gitignore

--- a/src/styles/contact-us.css
+++ b/src/styles/contact-us.css
@@ -2,6 +2,10 @@
   margin-bottom: 5em;
 }
 
+.content-card .card {
+  justify-content: center;
+}
+
 main section {
   display: flex;
   justify-items: center;
